Skip to content

GitLab

  • Projects
  • Groups
  • Snippets
  • Help
    • Loading...
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in
Settings
Settings
  • Project overview
    • Project overview
    • Details
    • Activity
    • Releases
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 678
    • Issues 678
    • List
    • Boards
    • Labels
    • Service Desk
    • Milestones
  • Merge Requests 53
    • Merge Requests 53
  • CI / CD
    • CI / CD
    • Pipelines
    • Jobs
    • Schedules
  • Operations
    • Operations
    • Incidents
    • Environments
  • Packages & Registries
    • Packages & Registries
    • Container Registry
  • Analytics
    • Analytics
    • CI / CD
    • Repository
    • Value Stream
  • Wiki
    • Wiki
  • Snippets
    • Snippets
  • Members
    • Members
  • Collapse sidebar
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
  • GNOME
  • SettingsSettings
  • Issues
  • #820

Closed (moved)
Open
Opened Dec 15, 2019 by Pacho Ramos@pachoramos

gnome-control-center-3.32 bluetooth: cannot connect to bluetooth device on first attempt

I am hitting this issue since... forever, with many different bluetooth speakers.

In summary, if I disconnect the device and, after some minutes, I try to reconnect, it cannot reconnect. I click connect "ON" in gnome-bluetooth. Switch is immediately changed to "OFF". To get it working again, I need to unpair the device and pair it again.

I see this in logs for each attempt to connect:

dic 15 20:35:32 dell-2017 bluetoothd[398]: Unable to get Headset Voice gateway SDP record: Device or resource busy
dic 15 20:35:32 dell-2017 bluetoothd[398]: connect error: Device or resource busy (16)
dic 15 20:35:34 dell-2017 bluetoothd[398]: connect error: Device or resource busy (16)
dic 15 20:35:44 dell-2017 bluetoothd[398]: Unable to get Headset Voice gateway SDP record: Device or resource busy
dic 15 20:35:44 dell-2017 bluetoothd[398]: connect error: Device or resource busy (16)
dic 15 20:35:45 dell-2017 bluetoothd[398]: Unable to get Headset Voice gateway SDP record: Device or resource busy
dic 15 20:35:45 dell-2017 bluetoothd[398]: connect error: Device or resource busy (16)
dic 15 20:35:47 dell-2017 bluetoothd[398]: connect error: Device or resource busy (16)

Thanks

Edited Dec 16, 2019 by Bastien Nocera
Assignee
Assign to
None
Milestone
None
Assign milestone
Time tracking
None
Due date
None
Reference: GNOME/gnome-control-center#820