settings-widget: Work-around intermittent connection problems

Disable discovery during pairing and connect so as to work around broken
firmwares and hardware not being able to correctly connect to remote
devices when the adapter is performing a discovery.

Closes: https://gitlab.gnome.org/GNOME/gnome-control-center/-/issues/820